<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory android:title="@string/notification">
        <SwitchPreference
            app:key="@string/key_reminder"
            app:defaultValue="false"
            android:title="@string/reminder"
            android:icon="@drawable/ic_notification_24"
            android:summaryOn="Set at 9.00 AM"
            android:summaryOff="Set Off"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/appearance">
        <ListPreference
            app:key="@string/key_theme"
            android:title="@string/menu_theme"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="1"
            android:icon="@drawable/ic_theme_24"
            android:entries="@array/entries_list_theme"
            android:entryValues="@array/entry_values_list_theme"/>
    </PreferenceCategory>

</PreferenceScreen>